--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,9 @@
 // Home Content
 
 .home {
-
+  .items {
+    width: 100%;
+  }
   .intro {
 
     h2 {
@@ -68,7 +70,7 @@
       img {
         width: 100%;
         height: auto;
-        border-radius: 10px;
+        border-radius: 20px;
       }
     }
   }
